# android-js-runtimes

./: .gitignore  LICENSE  README.md  build.gradle  jitpack.yaml  jitpack.yml  settings.gradle
download-jsc/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
jsc/: build.gradle
jsc-intl/: build.gradle
jsc-intl/src/main/: AndroidManifest.xml
jsc/src/main/: AndroidManifest.xml
quickjs/: CMakeLists.txt  build.gradle  settings.gradle
quickjs/src/main/: AndroidManifest.xml
quickjs/src/main/c/: quickjs_runtime.cpp
